# lion-azure

./: .dockerignore  .env.example  .gitignore  Dockerfile  MANIFEST.in  README.md  activate.bat  app_config.py  azure.md  build-distributable-package.bat  build-docker.bat  copy_data_to_azure.py  create_tree_view.bat  git-commit.bat  increment_version.py  proj_tree_view.py  project_tree_view.txt  pyproject.toml  requirements.txt  setup.py  start_lion.bat  start_lion_waitress.bat  to_azure.bat
.deploy/: build_container_app.sh  full_deploy_steps.sh
.github/workflows/: README.md  azure-pipelines.yml  cicd-app-service-pipelines.yml  cicd-container-app-pipelines.yml  docker-image-workflow.yml  lion-capp-AutoDeployTrigger-a93d786e-3d5c-4835-bf3f-2b38125fad6a.yml  master_lion.yml
orchestrator/: MANIFEST.in  README.md  build-whl.bat  pyproject.toml
orchestrator/src/lion_orchestrator/: __init__.py  config.py  create_venv.py  install_lion.py  lion_health_check.py  orchestrator.py  validate_installation.py
src/: dct_tour.py
src/lion/: __init__.py  __main__.py  copy_data_to_azure.py  lion_app.py
src/lion/algorithms/: depth_first_search.py
src/lion/auth/: auth_config.py  azure_auth.py  load_openid.py  remember_session.py  routes_auth.py  set_session_context.py  set_sql_session_context.py  token.py
src/lion/bootstrap/: __init__.py  before_request.py  constants.py  get_user.py  get_user_name.py  load_bootstrap.py  user_region_and_language.py  validate_paths.py
src/lion/changeovers/: changeover_shifts.py  validate_changeovers_data.py
src/lion/classification/: read_actual_movements.py  read_resources.py
technical-doc/: README.md  ReadMe.txt  conf.py  docs2flask.py  git-commit-changes.bat  global_params.py  image_path_extension.py  initial_setup.bat  lion_user_manual.lnk  modules.rstt  optimization_exact_method.txt  question_sample.txt  roles.py  run-sphinx.bat  trouble_shooting.rst
user-manual/: ReadMe.txt  about.rst  author.rst  conf.py  distribute.py  docs2flask.py  encyclopedia.rst  git-advisor.bat  global_params.py  initial_setup.bat  install.rst  navicon.rst  open_document.bat  question_sample.txt  requirements.txt  roles.py  run-sphinx.bat  troubleshooting.rst  video_path_extension.py
(+475 files in other folders)
